# ethdenver2024

./: .gitmodules  README.md
core/: Cargo.toml
core/src/: lib.rs
host/: Cargo.toml
host/src/: main.rs
http/request/: Cargo.toml
http/request/src/: main.rs
http/response/: Cargo.toml
http/response/src/: main.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
res/: example.json
